k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petshop-deployment
  labels:
    app: petshop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petshop
  template:
    metadata:
      labels:
        app: petshop
    spec:
      containers:
      - name: petshop
        image: mydocker3692/petshop:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 40
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 15
