k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petshop-service
spec:
  selector:
    app: petshop
  ports:
  - port: 80
    targetPort: 8081
  type: NodePort
